Broadcasting in Numpy Arrays completed

--- a/Numpy/2_creating_array.ipynb
+++ b/Numpy/2_creating_array.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f9e7fd8a-3b21-400b-a162-06e02af63449",
    "metadata": {},
    "outputs": [],
@@ -4257,7 +4257,9 @@
   {
    "cell_type": "markdown",
    "id": "7a11fbe1-1699-4243-9ca0-79940193fb29",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Iteration over ndarray"
    ]
@@ -4817,7 +4819,9 @@
   {
    "cell_type": "markdown",
    "id": "3b4a9dca-3761-42f6-bbc7-33141c78a62c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 0. Normal Division vs Floor Division"
    ]
@@ -4853,7 +4857,9 @@
   {
    "cell_type": "markdown",
    "id": "686b4c7b-560e-42e4-8667-1f64af50fb5f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 1. ndarrays with Scalar Values\n",
     "- element level operations"
@@ -5051,7 +5057,9 @@
   {
    "cell_type": "markdown",
    "id": "97096015-8c63-4c73-84eb-f714d3648136",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 2. ndarrays with ndarrays\n",
     "1. Conditions: \n",
@@ -5064,7 +5072,9 @@
   {
    "cell_type": "markdown",
    "id": "0dbe269b-9f29-4e13-a0e4-5af3e576b467",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### 1-D ndarrays"
    ]
@@ -5235,7 +5245,9 @@
   {
    "cell_type": "markdown",
    "id": "d191e48b-5114-4324-855a-f1b85beb19e4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### 2-D ndarrays"
    ]
@@ -5286,10 +5298,186 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0876f39c-c76b-4baa-9206-33b10bb00dc9",
+   "id": "b4b0ec71-ab03-4e86-a37f-53f6bd8461da",
    "metadata": {},
    "source": [
-    "## 3. Arithmetic Ops. Specific Numpy Methods"
+    "## 3. Broadcasting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7d241826-1159-48bd-8e2d-35513323eacf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11 21 31 41]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1A\n",
+    "a = np.array([10,20,30,40])\n",
+    "b = np.array([1])\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "88ee4f27-72bc-4899-a19f-0f23b0917c23",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (4,) (2,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m20\u001b[39m,\u001b[38;5;241m30\u001b[39m,\u001b[38;5;241m40\u001b[39m])\n\u001b[1;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m])\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(a\u001b[38;5;241m+\u001b[39mb)\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (4,) (2,) "
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1B\n",
+    "a = np.array([10,20,30,40])\n",
+    "b = np.array([1,2])\n",
+    "print(a+b)\n",
+    "# Note: Rule 2 of Broadcasting failed!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "70c27b62-ed22-445d-bfbf-79f4795a4f06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 80 100]\n",
+      " [100 120]\n",
+      " [120 140]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2A\n",
+    "a = np.array([[10,20],[30,40],[50,60]])\n",
+    "b = np.array([70,80])\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b294a9a9-a207-4a6f-ae89-66be929c4f92",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (3,2) (3,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m20\u001b[39m],[\u001b[38;5;241m30\u001b[39m,\u001b[38;5;241m40\u001b[39m],[\u001b[38;5;241m50\u001b[39m,\u001b[38;5;241m60\u001b[39m]])\n\u001b[1;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m70\u001b[39m,\u001b[38;5;241m80\u001b[39m,\u001b[38;5;241m90\u001b[39m])\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(a\u001b[38;5;241m+\u001b[39mb)\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,2) (3,) "
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2B\n",
+    "a = np.array([[10,20],[30,40],[50,60]])\n",
+    "b = np.array([70,80,90])\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0fa9d309-576f-463e-b2a9-2a5b99eb8c09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[50 60 70]\n",
+      " [60 70 80]\n",
+      " [70 80 90]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 3A\n",
+    "a = np.array([[10],[20],[30]])\n",
+    "b = np.array([40,50,60])\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e6951c9d-c324-4a67-a4d0-c3518ba5c37c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (3,2) (3,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m a \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m10\u001b[39m],[\u001b[38;5;241m20\u001b[39m,\u001b[38;5;241m10\u001b[39m],[\u001b[38;5;241m30\u001b[39m,\u001b[38;5;241m10\u001b[39m]])\n\u001b[1;32m      3\u001b[0m b \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m40\u001b[39m,\u001b[38;5;241m50\u001b[39m,\u001b[38;5;241m60\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(a\u001b[38;5;241m+\u001b[39mb)\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,2) (3,) "
+     ]
+    }
+   ],
+   "source": [
+    "# Example 3B\n",
+    "a = np.array([[10,10],[20,10],[30,10]])\n",
+    "b = np.array([40,50,60])\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d649c1f5-4159-408b-b71a-a5481bb9ac41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 50  60  70  80]\n",
+      " [ 60  70  80  90]\n",
+      " [ 70  80  90 100]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 3C\n",
+    "a = np.array([[10],[20],[30]])\n",
+    "b = np.array([40,50,60,70])\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0876f39c-c76b-4baa-9206-33b10bb00dc9",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## 4. Arithmetic Ops. Specific Numpy Methods"
    ]
   },
   {
