array manipulation functions part 2 completed

--- a/Numpy/rivision1.ipynb
+++ b/Numpy/rivision1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "53a7300f-61a2-4c59-99d2-8a5390ea29c3",
    "metadata": {},
    "outputs": [],
@@ -458,7 +458,9 @@
   {
    "cell_type": "markdown",
    "id": "a6acd49e-da52-4f7d-9395-5cc87db7c50c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### creating numpy array using random library "
    ]
@@ -1050,7 +1052,9 @@
   {
    "cell_type": "markdown",
    "id": "b52b9c51-521d-408f-b20a-c42d1912c5e7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### Slicing 2-D ndarray"
    ]
@@ -1363,9 +1367,427 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2fb2292a-2418-4d9e-93a0-15c5b958bf42",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Week 1 Revision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "afc5899d-2b38-462f-be84-53776019a79b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[93 42 98 62 54 92 28 51 44 62]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,10) \n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "847ac5b3-585e-4f18-877e-340f4717fdde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[93 42 98 62 54]\n",
+      " [92 28 51 44 62]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = a.reshape(2,5)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a5565df2-f016-4d49-b5e1-b309cd4d0bb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[93 42]\n",
+      " [98 62]\n",
+      " [54 92]\n",
+      " [28 51]\n",
+      " [44 62]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = a.reshape(5,2)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bab95322-1426-42ce-bd33-d118d289abee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[92 99 94 60]\n",
+      " [ 4  8 34 15]\n",
+      " [ 9 24 92 77]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,(3,4))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d590c887-374b-4f83-abba-48b947e8c5cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[92 99 94 60  4  8 34 15  9 24 92 77]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.reshape(a,12)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7cd9b43e-d090-4431-8186-e77294f744ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[92 99]\n",
+      "  [94 60]\n",
+      "  [ 4  8]]\n",
+      "\n",
+      " [[34 15]\n",
+      "  [ 9 24]\n",
+      "  [92 77]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.reshape(a,(2,3,2))\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "98de1800-b8f8-4b85-b8f9-e4dfed5e8d1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[32 90 64 18 43 51 65  9 13 91 11 19 57 44 22 70 16 23 86 64  2 54 92 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,24)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4f407d99-7e51-43b0-9121-433cabd4ca24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[32 90 64 18 43 51]\n",
+      " [65  9 13 91 11 19]\n",
+      " [57 44 22 70 16 23]\n",
+      " [86 64  2 54 92 24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.reshape(a,(4,-1))\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "52366841-cc66-4aae-b705-3e01a7a0a5e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[32 90 64 18]\n",
+      " [43 51 65  9]\n",
+      " [13 91 11 19]\n",
+      " [57 44 22 70]\n",
+      " [16 23 86 64]\n",
+      " [ 2 54 92 24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = a.reshape(-1,4)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b1934e77-055e-406c-aa1e-7f122ed8e19f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[32 44 18 16]\n",
+      " [65 64 91 92]\n",
+      " [57 64 70 51]\n",
+      " [86 13 54 19]\n",
+      " [90 22 43 23]\n",
+      " [ 9  2 11 24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = b.reshape((-1,4),order='F')\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1b5ef3e2-193b-495b-a7e2-71208e0b94d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[69 25 17 25 32 32]\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,6)\n",
+    "print(a)\n",
+    "print(a.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c817d1fe-dcb4-4504-a82b-ecde18a4ed62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[69 25 17 25]\n",
+      " [32 32 69 25]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.resize(a,(2,4))\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "dca4c405-d9d2-4128-87a3-ecddf160ea7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot resize an array that references or is referenced\nby another array in this way.\nUse the np.resize function or refcheck=False",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m a\u001b[38;5;241m.\u001b[39mresize((\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m))\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(a)\n",
+      "\u001b[0;31mValueError\u001b[0m: cannot resize an array that references or is referenced\nby another array in this way.\nUse the np.resize function or refcheck=False"
+     ]
+    }
+   ],
+   "source": [
+    "a.resize((2,2,2))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5c51bc76-2eea-4810-82c2-12f79dd60b06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n",
+      "After being Resized\n",
+      "[[[1 2]\n",
+      "  [3 4]]\n",
+      "\n",
+      " [[5 6]\n",
+      "  [0 0]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(1,7)\n",
+    "print(a)\n",
+    "print('After being Resized')\n",
+    "a.resize(2,2,2)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7952fec5-bf34-4089-a6cc-fd987fb2e6e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['7' 'dhoni' '18' 'kohli' '45' 'rohit' 'True' '7.7']\n",
+      "<U32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How to use Hetero Elements in numpy array Hetero Elements\n",
+    "L = [7,'dhoni',18,'kohli',45,'rohit',True,7.7]\n",
+    "a = np.array(L)\n",
+    "print(a)\n",
+    "print(a.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "773f3118-6d1d-4d15-a588-1b99b8e6fbe4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 : <class 'numpy.str_'>\n",
+      "dhoni : <class 'numpy.str_'>\n",
+      "18 : <class 'numpy.str_'>\n",
+      "kohli : <class 'numpy.str_'>\n",
+      "45 : <class 'numpy.str_'>\n",
+      "rohit : <class 'numpy.str_'>\n",
+      "True : <class 'numpy.str_'>\n",
+      "7.7 : <class 'numpy.str_'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in a:\n",
+    "    print(f'{i} : {type(i)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "5036d20e-57c6-455d-ae46-19b999e19b35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7 'dhoni' 18 'kohli' 45 'rohit' True 7.7 (2, 4) list([2, 4])]\n",
+      "object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Trick to use Hetero Elements with arrays \n",
+    "L = [7,'dhoni',18,'kohli',45,'rohit',True,7.7,(2,4),[2,4]]\n",
+    "b = np.array(L,dtype='object')\n",
+    "print(b)\n",
+    "print(b.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "1c966896-86b0-44a4-92be-c762db4bdcc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 : <class 'int'>\n",
+      "dhoni : <class 'str'>\n",
+      "18 : <class 'int'>\n",
+      "kohli : <class 'str'>\n",
+      "45 : <class 'int'>\n",
+      "rohit : <class 'str'>\n",
+      "True : <class 'bool'>\n",
+      "7.7 : <class 'float'>\n",
+      "(2, 4) : <class 'tuple'>\n",
+      "[2, 4] : <class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in b:\n",
+    "    print(f'{i} : {type(i)}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5336556f-6374-4609-bf3b-d94eab892163",
+   "id": "fa066392-5df6-4993-80ce-1b345c601484",
    "metadata": {},
    "outputs": [],
    "source": []
