--- a/Numpy/rivision1.ipynb
+++ b/Numpy/rivision1.ipynb
@@ -2,12 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "53a7300f-61a2-4c59-99d2-8a5390ea29c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fea1ec54",
+   "metadata": {},
+   "source": [
+    "## Random Revisions"
    ]
   },
   {
@@ -1364,6 +1372,159 @@
    "source": [
     "for x in np.nditer(a,flags=['buffered'],op_dtypes=['str']):\n",
     "    print(x,end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "92d8bb66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[48 32 21 74]\n",
+      " [ 3 34 13 38]\n",
+      " [19 27 98 64]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Vertical concatenation\n",
+    "a = np.random.randint(1,101,(3,4))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0663f204",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[91 60 55 38]\n",
+      " [72 96 40 18]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.random.randint(1,101,(2,4))\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1d7fe4fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[48 32 21 74]\n",
+      " [ 3 34 13 38]\n",
+      " [19 27 98 64]\n",
+      " [91 60 55 38]\n",
+      " [72 96 40 18]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.concatenate((a,b))\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e2673806",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2 75 87  5]\n",
+      " [86 74 23 35]\n",
+      " [26 98 48 55]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Horizontal concatenation\n",
+    "a = np.random.randint(1,101,(3,4))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c7bd2e9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[55 67]\n",
+      " [26 87]\n",
+      " [ 9 87]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.random.randint(1,101,(3,2))\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "af85a371",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2 75 87  5 55 67]\n",
+      " [86 74 23 35 26 87]\n",
+      " [26 98 48 55  9 87]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.concatenate((a,b),axis=1)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5806077d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[67 98 92 81 83  5 66 99 27 65 24 35 12 92 42 88]\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "# when V/H Concatenation is not possible\n",
+    "a = np.random.randint(1,101,(3,4))\n",
+    "b = np.random.randint(1,101,(2,2))\n",
+    "c = np.concatenate((a,b),axis=None)\n",
+    "print(c)\n",
+    "print(c.size)"
    ]
   },
   {
