--- a/Numpy/5_splitting_numpy_arrays.ipynb
+++ b/Numpy/5_splitting_numpy_arrays.ipynb
@@ -1836,6 +1836,498 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. dsplit()\n",
+    "- min. 3-D array\n",
+    "- split based on axis=2 ==> column-wise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# help(np.dsplit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A. Section Based"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3-D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  1  2  3]\n",
+      "  [ 4  5  6  7]\n",
+      "  [ 8  9 10 11]]\n",
+      "\n",
+      " [[12 13 14 15]\n",
+      "  [16 17 18 19]\n",
+      "  [20 21 22 23]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(24).reshape(2,3,4)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[[ 0,  1],\n",
+      "        [ 4,  5],\n",
+      "        [ 8,  9]],\n",
+      "\n",
+      "       [[12, 13],\n",
+      "        [16, 17],\n",
+      "        [20, 21]]]), array([[[ 2,  3],\n",
+      "        [ 6,  7],\n",
+      "        [10, 11]],\n",
+      "\n",
+      "       [[14, 15],\n",
+      "        [18, 19],\n",
+      "        [22, 23]]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "split_arrays = np.dsplit(a,2)\n",
+    "print(split_arrays)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  1]\n",
+      "  [ 4  5]\n",
+      "  [ 8  9]]\n",
+      "\n",
+      " [[12 13]\n",
+      "  [16 17]\n",
+      "  [20 21]]]\n",
+      "\n",
+      "[[[ 2  3]\n",
+      "  [ 6  7]\n",
+      "  [10 11]]\n",
+      "\n",
+      " [[14 15]\n",
+      "  [18 19]\n",
+      "  [22 23]]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for arr in split_arrays:\n",
+    "    print(arr)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## B. Index Based"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3-D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  1  2  3]\n",
+      "  [ 4  5  6  7]\n",
+      "  [ 8  9 10 11]]\n",
+      "\n",
+      " [[12 13 14 15]\n",
+      "  [16 17 18 19]\n",
+      "  [20 21 22 23]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(24).reshape(2,3,4)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[[ 0],\n",
+      "        [ 4],\n",
+      "        [ 8]],\n",
+      "\n",
+      "       [[12],\n",
+      "        [16],\n",
+      "        [20]]]), array([[[ 1,  2],\n",
+      "        [ 5,  6],\n",
+      "        [ 9, 10]],\n",
+      "\n",
+      "       [[13, 14],\n",
+      "        [17, 18],\n",
+      "        [21, 22]]]), array([[[ 3],\n",
+      "        [ 7],\n",
+      "        [11]],\n",
+      "\n",
+      "       [[15],\n",
+      "        [19],\n",
+      "        [23]]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "split_arrays = np.dsplit(a,[1,3])\n",
+    "print(split_arrays)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0]\n",
+      "  [ 4]\n",
+      "  [ 8]]\n",
+      "\n",
+      " [[12]\n",
+      "  [16]\n",
+      "  [20]]]\n",
+      "\n",
+      "[[[ 1  2]\n",
+      "  [ 5  6]\n",
+      "  [ 9 10]]\n",
+      "\n",
+      " [[13 14]\n",
+      "  [17 18]\n",
+      "  [21 22]]]\n",
+      "\n",
+      "[[[ 3]\n",
+      "  [ 7]\n",
+      "  [11]]\n",
+      "\n",
+      " [[15]\n",
+      "  [19]\n",
+      "  [23]]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for arr in split_arrays:\n",
+    "    print(arr)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. array_split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on _ArrayFunctionDispatcher in module numpy:\n",
+      "\n",
+      "array_split(ary, indices_or_sections, axis=0)\n",
+      "    Split an array into multiple sub-arrays.\n",
+      "    \n",
+      "    Please refer to the ``split`` documentation.  The only difference\n",
+      "    between these functions is that ``array_split`` allows\n",
+      "    `indices_or_sections` to be an integer that does *not* equally\n",
+      "    divide the axis. For an array of length l that should be split\n",
+      "    into n sections, it returns l % n sub-arrays of size l//n + 1\n",
+      "    and the rest of size l//n.\n",
+      "    \n",
+      "    See Also\n",
+      "    --------\n",
+      "    split : Split array into multiple sub-arrays of equal size.\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> x = np.arange(8.0)\n",
+      "    >>> np.array_split(x, 3)\n",
+      "    [array([0.,  1.,  2.]), array([3.,  4.,  5.]), array([6.,  7.])]\n",
+      "    \n",
+      "    >>> x = np.arange(9)\n",
+      "    >>> np.array_split(x, 4)\n",
+      "    [array([0, 1, 2]), array([3, 4]), array([5, 6]), array([7, 8])]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(np.array_split)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A. Section Based"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1-D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([0, 1, 2, 3]), array([4, 5, 6, 7]), array([ 8,  9, 10])]\n",
+      "\n",
+      "[0 1 2 3]\n",
+      "\n",
+      "[4 5 6 7]\n",
+      "\n",
+      "[ 8  9 10]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(11)\n",
+    "split_arrays = np.array_split(a,3)\n",
+    "print(split_arrays)\n",
+    "print()\n",
+    "for arr in split_arrays:\n",
+    "    print(arr)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2-D Array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Vertical Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(12).reshape(3,4)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3]\n",
+      " [4 5 6 7]]\n",
+      "\n",
+      "[[ 8  9 10 11]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "split_arrays = np.array_split(a,2)\n",
+    "for arr in split_arrays:\n",
+    "    print(arr)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Horizontal Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(12).reshape(3,4)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1]\n",
+      " [4 5]\n",
+      " [8 9]]\n",
+      "\n",
+      "[[ 2]\n",
+      " [ 6]\n",
+      " [10]]\n",
+      "\n",
+      "[[ 3]\n",
+      " [ 7]\n",
+      " [11]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "split_arrays = np.array_split(a,3,axis=1)\n",
+    "for arr in split_arrays:\n",
+    "    print(arr)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## B. Index Based --> Exactly Same as split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1-D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([0, 1]), array([2, 3, 4]), array([5, 6]), array([ 7,  8,  9, 10])]\n",
+      "\n",
+      "[0 1]\n",
+      "\n",
+      "[2 3 4]\n",
+      "\n",
+      "[5 6]\n",
+      "\n",
+      "[ 7  8  9 10]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(11)\n",
+    "split_arrays = np.array_split(a,[2,5,7])\n",
+    "print(split_arrays)\n",
+    "print()\n",
+    "for arr in split_arrays:\n",
+    "    print(arr)\n",
+    "    print()\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
