--- a/Numpy/rivision1.ipynb
+++ b/Numpy/rivision1.ipynb
@@ -1605,40 +1605,497 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d8197bd7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "[array([1, 2, 3]), array([4, 5, 6]), array([7, 8, 9])]\n",
+      "[1 2 3]\n",
+      "[4 5 6]\n",
+      "[7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split() # Section Based # 1-D Array \n",
+    "a = np.arange(1,10)\n",
+    "print(a)\n",
+    "split_array = np.split(a,3)\n",
+    "print(split_array)\n",
+    "for arr in split_array:\n",
+    "    print(arr)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "c13d8f0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "\n",
+      "[array([0, 1]), array([2, 3, 4]), array([5, 6, 7]), array([8, 9])]\n",
+      "\n",
+      "[0 1]\n",
+      "[2 3 4]\n",
+      "[5 6 7]\n",
+      "[8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split() # Index Based # 1-D Array \n",
+    "a = np.arange(10)\n",
+    "print(a)\n",
+    "print()\n",
+    "split_array = np.split(a,[2,5,8])\n",
+    "print(split_array)\n",
+    "print()\n",
+    "for arr in split_array:\n",
+    "    print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "fc19fe50",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n",
+      "\n",
+      "[array([[1, 2, 3, 4]]), array([[5, 6, 7, 8]]), array([[ 9, 10, 11, 12]])]\n",
+      "\n",
+      "[[1 2 3 4]]\n",
+      "[[5 6 7 8]]\n",
+      "[[ 9 10 11 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split() # Section Based # 2-D Array - Vertical Split\n",
+    "a = np.arange(1,13).reshape(3,4)\n",
+    "print(a)\n",
+    "print()\n",
+    "split_array = np.split(a,3)\n",
+    "print(split_array)\n",
+    "print()\n",
+    "for arr in split_array:\n",
+    "    print(arr)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e0a2b1b6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n",
+      "\n",
+      "[array([[ 1,  2],\n",
+      "       [ 5,  6],\n",
+      "       [ 9, 10]]), array([[ 3,  4],\n",
+      "       [ 7,  8],\n",
+      "       [11, 12]])]\n",
+      "\n",
+      "[[ 1  2]\n",
+      " [ 5  6]\n",
+      " [ 9 10]]\n",
+      "[[ 3  4]\n",
+      " [ 7  8]\n",
+      " [11 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split() # Section Based # 2-D Array - Horizontal Split\n",
+    "print(a)\n",
+    "print()\n",
+    "split_array = np.split(a,2,axis=1)\n",
+    "print(split_array)\n",
+    "print()\n",
+    "for arr in split_array:\n",
+    "    print(arr)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3a3e4d5b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]\n",
+      " [17 18 19 20]\n",
+      " [21 22 23 24]]\n",
+      "\n",
+      "[array([[1, 2, 3, 4],\n",
+      "       [5, 6, 7, 8]]), array([[ 9, 10, 11, 12],\n",
+      "       [13, 14, 15, 16],\n",
+      "       [17, 18, 19, 20]]), array([[21, 22, 23, 24]])]\n",
+      "\n",
+      "[[1 2 3 4]\n",
+      " [5 6 7 8]]\n",
+      "\n",
+      "[[ 9 10 11 12]\n",
+      " [13 14 15 16]\n",
+      " [17 18 19 20]]\n",
+      "\n",
+      "[[21 22 23 24]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split() # Index Based # 2-D Array - Vertical Split\n",
+    "a = np.arange(1,25).reshape(6,4)\n",
+    "print(a)\n",
+    "print()\n",
+    "split_array = np.split(a,[2,5])\n",
+    "print(split_array)\n",
+    "print()\n",
+    "for arr in split_array:\n",
+    "    print(arr)\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0c17c0b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]\n",
+      " [17 18 19 20]\n",
+      " [21 22 23 24]]\n",
+      "\n",
+      "[array([[ 1],\n",
+      "       [ 5],\n",
+      "       [ 9],\n",
+      "       [13],\n",
+      "       [17],\n",
+      "       [21]]), array([[ 2],\n",
+      "       [ 6],\n",
+      "       [10],\n",
+      "       [14],\n",
+      "       [18],\n",
+      "       [22]]), array([[ 3,  4],\n",
+      "       [ 7,  8],\n",
+      "       [11, 12],\n",
+      "       [15, 16],\n",
+      "       [19, 20],\n",
+      "       [23, 24]])]\n",
+      "\n",
+      "[[ 1]\n",
+      " [ 5]\n",
+      " [ 9]\n",
+      " [13]\n",
+      " [17]\n",
+      " [21]]\n",
+      "\n",
+      "[[ 2]\n",
+      " [ 6]\n",
+      " [10]\n",
+      " [14]\n",
+      " [18]\n",
+      " [22]]\n",
+      "\n",
+      "[[ 3  4]\n",
+      " [ 7  8]\n",
+      " [11 12]\n",
+      " [15 16]\n",
+      " [19 20]\n",
+      " [23 24]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split() # Index Based # 2-D Array - Horizontal Split\n",
+    "a = np.arange(1,25).reshape(6,4)\n",
+    "print(a)\n",
+    "print()\n",
+    "split_array = np.split(a,[1,2],axis=1)\n",
+    "print(split_array)\n",
+    "print()\n",
+    "for arr in split_array:\n",
+    "    print(arr)\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ca28228d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]\n",
+      " [17 18 19 20]\n",
+      " [21 22 23 24]]\n",
+      "\n",
+      "[[1 2 3 4]\n",
+      " [5 6 7 8]]\n",
+      "\n",
+      "[[ 9 10 11 12]\n",
+      " [13 14 15 16]]\n",
+      "\n",
+      "[[17 18 19 20]\n",
+      " [21 22 23 24]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# vsplit() # 2-D # section based\n",
+    "a = np.arange(1,25).reshape(6,4)\n",
+    "print(a)\n",
+    "print()\n",
+    "split_array = np.vsplit(a,3)\n",
+    "for arr in split_array:\n",
+    "    print(arr)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f6abda1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]\n",
+      " [17 18 19 20]\n",
+      " [21 22 23 24]]\n",
+      "\n",
+      "[[1 2 3 4]\n",
+      " [5 6 7 8]]\n",
+      "\n",
+      "[[ 9 10 11 12]\n",
+      " [13 14 15 16]\n",
+      " [17 18 19 20]]\n",
+      "\n",
+      "[[21 22 23 24]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# vsplit() # 2-D # index based\n",
+    "a = np.arange(1,25).reshape(6,4)\n",
+    "print(a)\n",
+    "print()\n",
+    "split_array = np.split(a,[2,5])\n",
+    "for arr in split_array:\n",
+    "    print(arr)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2d126d09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "\n",
+      "[0 1 2]\n",
+      "\n",
+      "[3 4 5]\n",
+      "\n",
+      "[6 7 8]\n",
+      "\n",
+      "[ 9 10 11]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hsplit() # 1-D # section based\n",
+    "a = np.arange(12)\n",
+    "print(a)\n",
+    "print()\n",
+    "split_array = np.hsplit(a,4)\n",
+    "for arr in split_array:\n",
+    "    print(arr)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4f55fb24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "\n",
+      "[0 1]\n",
+      "\n",
+      "[2 3 4]\n",
+      "\n",
+      "[5 6]\n",
+      "\n",
+      "[ 7  8  9 10 11]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hsplit() # 1-D # index based\n",
+    "a = np.arange(12)\n",
+    "print(a)\n",
+    "print()\n",
+    "split_array = np.hsplit(a,[2,5,7])\n",
+    "for arr in split_array:\n",
+    "    print(arr)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a127f7e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4  5]\n",
+      " [ 6  7  8  9 10 11]\n",
+      " [12 13 14 15 16 17]\n",
+      " [18 19 20 21 22 23]]\n",
+      "\n",
+      "[[ 0  1]\n",
+      " [ 6  7]\n",
+      " [12 13]\n",
+      " [18 19]]\n",
+      "\n",
+      "[[ 2  3]\n",
+      " [ 8  9]\n",
+      " [14 15]\n",
+      " [20 21]]\n",
+      "\n",
+      "[[ 4  5]\n",
+      " [10 11]\n",
+      " [16 17]\n",
+      " [22 23]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hsplit() # 2-D # section based\n",
+    "a = np.arange(0,24).reshape(4,6)\n",
+    "print(a)\n",
+    "print()\n",
+    "split_array = np.hsplit(a,3)\n",
+    "for arr in split_array:\n",
+    "    print(arr)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "57e03e7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4  5]\n",
+      " [ 6  7  8  9 10 11]\n",
+      " [12 13 14 15 16 17]\n",
+      " [18 19 20 21 22 23]]\n",
+      "\n",
+      "[[ 0  1]\n",
+      " [ 6  7]\n",
+      " [12 13]\n",
+      " [18 19]]\n",
+      "\n",
+      "[[ 2  3  4]\n",
+      " [ 8  9 10]\n",
+      " [14 15 16]\n",
+      " [20 21 22]]\n",
+      "\n",
+      "[[ 5]\n",
+      " [11]\n",
+      " [17]\n",
+      " [23]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hsplit() # 2-D # index based\n",
+    "a = np.arange(0,24).reshape(4,6)\n",
+    "print(a)\n",
+    "print()\n",
+    "split_array = np.hsplit(a,[2,5])\n",
+    "for arr in split_array:\n",
+    "    print(arr)\n",
+    "    print()\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c17c0b7",
+   "id": "f1a8c819",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1977,7 +2434,7 @@
     }
    ],
    "source": [
-    "# How to use Hetero Elements in numpy array Hetero Elements\n",
+    "# How to use Hetero Elements in numpy array \n",
     "L = [7,'dhoni',18,'kohli',45,'rohit',True,7.7]\n",
     "a = np.array(L)\n",
     "print(a)\n",
